--- a/angular/theme/teq.less
+++ b/angular/theme/teq.less
@@ -42,6 +42,7 @@ header {
   background: @brand-success;
   color: white;
   padding-top: @navbar-height;
+  margin-bottom: 2em;
 
   .container {
     padding-top: 50px;
@@ -64,6 +65,11 @@ section {
   }
 }
 
+.container {
+  section {
+    margin-bottom: 4em;
+  }
+}
 footer {
   color: white;
   padding: 25px 0;
